# XD

./: .clang-format  .gitignore  BuildXD.bat  CMakeLists.txt  CMakeSettings.json  CODE_STANDARD.md  README.md  Solution_Engine.cmake  Solution_Test.cmake  cygwin_gcc_toolchain.cmake
Engine/: CMakeLists.txt  STDIncludes.h  XDEngine.h  XDEngine_Minimal.h  XDEngine_PlatformSelector.h  XD_Engine_Definitions.h  XD_Engine_Minimal.h  XD_Engine_PlatformSelector.h
Engine/Application/: CMakeLists.txt  PlatformWidgetInterface.h  XDApplication_Minimal.h  XDApplication_PlatformSelector.h  XD_Application.cpp  XD_Application.h  XD_ApplicationPlatformSelector.h  XD_Application_Minimal.h  XD_PlatformApplication.h  XD_PlatformWidget.h  XD_Widget.cpp  XD_Widget.h  XD_Window.cpp  XD_Window.h  XD_Window_Widget.cpp  XD_Window_Widget.h
Engine/Application/Platform/: XDApplication_PlatformSelector.cpp  XDApplication_PlatformSelector.h  XD_Application_PlatformSelector.cpp  XD_Application_PlatformSelector.h
Engine/Application/Platform/Windows/: XD_WindowsApplication.cpp  XD_WindowsApplication.h  XD_WindowsWidget.cpp  XD_WindowsWidget.h  XD_WindowsWindow.cpp  XD_WindowsWindow.h  XD_WindowsWindow_Widget.cpp  XD_WindowsWindow_Widget.h
Engine/Application/Windows/: WindowsWidget.h
Engine/Common/: CMakeLists.txt  XD_Allocator.cpp  XD_Allocator.h  XD_Callable.h  XD_Delegate.h  XD_Library.h  XD_Log.h  XD_Math.h  XD_MulticastDelegate.h  XD_Mutex.h  XD_Pool.h  XD_Thread.h  XD_TimeClock.cpp  XD_TimeClock.h  XD_TimerManager.cpp  XD_TimerManager.h  XD_Types.h  XD_Utility.h
Engine/Common/Allocator/: XD_Allocator.cpp  XD_Allocator.h  XD_LinearAllocator.cpp  XD_LinearAllocator.h  XD_MallocWrapper.cpp  XD_MallocWrapper.h
Engine/Common/Container/: XD_Array.h
Engine/Common/Math/: XDMath_Common.h  XD_Math_Common.h  XD_Matrix4.h  XD_Vector2.h  XD_Vector3.h  XD_Vector4.h
Engine/Common/Platform/: XDCommon_PlatformSelector.cpp  XDCommon_PlatformSelector.h  XD_Common_PlatformSelector.cpp  XD_Common_PlatformSelector.h
Engine/Common/Platform/Windows/: XD_LibraryWindows_Implementation.cpp  XD_LibraryWindows_Implementation.h  XD_WindowsLibrary.cpp  XD_WindowsLibrary.h  XD_WindowsMutex.cpp  XD_WindowsMutex.h  XD_WindowsThread.cpp  XD_WindowsThread.h
Engine/Common/Windows/: XD_LibraryWindows_Implementation.cpp  XD_LibraryWindows_Implementation.h
Engine/Graphics/: CMakeLists.txt  XDGraphics_Minimal.h  XD_Buffer.h  XD_BufferLayout.cpp  XD_BufferLayout.h  XD_CommandBuffer.cpp  XD_CommandBuffer.h  XD_Context.h  XD_GraphicsApi.cpp  XD_GraphicsApi.h  XD_GraphicsApi_Interface.cpp  XD_GraphicsApi_Interface.h  XD_GraphicsContext.cpp  XD_GraphicsContext.h  XD_GraphicsSystem.cpp  XD_GraphicsSystem.h  XD_GraphicsTypes.h  XD_Graphics_Minimal.h  XD_HandleMap.h  XD_LowLevelGraphicsApi.cpp  XD_Renderer.cpp  XD_Renderer.h  XD_Renderer_Base.cpp  XD_Renderer_Base.h  XD_Shader.cpp  XD_Shader.h
Engine/Graphics/GraphicsApi/: XD_GraphicsApi_Interface.h
Engine/Graphics/GraphicsApi/OpenGL/: OpenGLApi.cpp  OpenGLApi.h  XD_GLCheck.cpp  XD_GLCheck.h  XD_OpenGLContext.h  XD_OpenGLGraphicsApi.cpp  XD_OpenGLGraphicsApi.h  XD_OpenGLPlatform.cpp  XD_OpenGLRenderer.cpp  XD_OpenGLRenderer.h  XD_OpenGLShader.cpp  XD_OpenGLShader.h
Engine/Graphics/GraphicsApi/OpenGL/Platform/: XD_OpenGL_PlatformSelector.cpp  XD_OpenGL_PlatformSelector.h
Engine/Graphics/GraphicsApi/OpenGL/Platform/WIndows/: XD_WindowsOpenGLContext.cpp  (+5 more)
Engine/Resources/: TestVS.vs
Engine/Source/: CMakeLists.txt  XD_Engine.cpp  XD_Engine.h
Engine/Source/Core/: CMakeLists.txt  EngineDummy.cpp  EngineDummy.h  Essentials.h  Main.cpp
Engine/Tests/: CMakeLists.txt
Engine/Tests/Source/: Main.cpp  XDEngineTests_BufferLayout.cpp  XDEngineTests_CommandBuffer.cpp  XDEngineTests_Containers.cpp  XDEngineTests_GraphicsApi.cpp  XDEngineTests_HandleMap.cpp  XDEngineTests_Math.cpp  XDEngineTests_Widget.cpp  XDEngineTests_Window.cpp
Framework/: CMakeLists.txt  XDFramework.h
Framework/Source/: CMakeLists.txt  FrameworkDummy.cpp  FrameworkDummy.h
Framework/Tests/: CMakeLists.txt
Framework/Tests/Source/: Main.cpp
Game/: CMakeLists.txt
Game/Source/: CMakeLists.txt  Game.cpp  Game.h  GameMinimal.h  Game_Minimal.h  Main.cpp
NFE_01/NFE_01/: CMakeLists.txt  main.cpp
NFE_01/NFE_01/Engine/Core/: Debug.h  Helpers.h  OldStyleExceptionFlow.h  TestableInterface.h  Type.h
NFE_01/NFE_01/Engine/Parser/: ParserPolicySelector.h
Samples/1/: .gitmodules  CMakeLists.txt
Samples/1/Engine/: main.cpp
Samples/1/Engine/App/: CMakeLists.txt  XD_App.cpp  XD_App.h
Samples/1/Engine/Base/: Log.h  XD_Code.h
Samples/2/: CMakeLists.txt
Samples/2/_src/_test/: CMakeLists.txt  Module.cmake  main.cpp
Samples/2/_src/base/: base.cpp  strings.h  xd.h  xd_bitmap.h  xd_callback.h  xd_cast.h  xd_code.h  xd_frame.h  xd_lang.h  xd_log.h  xd_spell.h  xd_string.cpp  xd_string.h  xd_type.h
Samples/2/_src/base/_test/: CMakeLists.txt  main.cpp
Samples/2/_src/math/: vector.h  xd_bt4.h  xd_color.cpp  xd_color.h  xd_f2.h  xd_f4.h  xd_f44.cpp  xd_f44.h  xd_i2.h  xd_i4.h  xd_math.h  xd_math3d.cpp  xd_math3d.h  xd_point2.h  xd_vector2.h
Samples/2/_src/math/_test/: CMakeLists.txt  main.cpp
Samples/2/_src/os/: xd_os_interface.h
Samples/2/_src/os/_test/: CMakeLists.txt  main.cpp
Samples/2/_src/os/win/: XD_OS.cpp  XD_OS_DRAW_CONTEXT.h  XD_WDGT.cpp  XD_WDGT.h
Samples/2/_test/qt/xd_qt/: CMakeLists.txt  List.cpp  List.h  RemoveDups.h  SafeAssert.h  main.cpp
Samples/2/engine/: main.cpp
Wtf/Project/: CMakeLists.txt  CMakeLists_Config_Build.txt  CMakeLists_Config_Cpp.txt  CMakeLists_Config_Includes.txt  CMakeLists_Config_Modules.txt  CMakeLists_Config_Projects.txt
Wtf/Project/include/: Interface_Tests.h
Wtf/Project/include/core/: DataTypes.h
Wtf/Project/modules/module_1/: CMakeLists.txt  module_1.cpp  module_1.h
Wtf/Project/modules/xcall/: CMakeLists.txt  XCall.cpp  XCall.h  XCallTests.cpp  XCallTests.h
Wtf/Project/modules/xml/: CMakeLists.txt  xml.cpp  xml.h
Wtf/Project/projects/sample_1/: CMakeLists.txt  main.cpp
Wtf/Project/projects/sample_2/: CMakeLists.txt  main.cpp
_cmake/: XD.sln  (+16 more)
(+303 files in other folders)
